实现刷卡充电，手机端控制充电，刷卡滴响，控制继电器

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "qdialog": "cpp",
-        "qstring": "cpp"
+        "qstring": "cpp",
+        "qmqttclient": "cpp",
+        "qmqttsubscription": "cpp"
     }
 }
